apps/gcp/prow-dev/release/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prow
  namespace: apps-dev
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: apps-dev
  hostnames:
    - "${DOMAIN_NAME}"
  rules:
    - backendRefs:
        - name: prow-deck
          port: 80
    - matches:
        - path:
            value: /hook
      backendRefs:
        - name: prow-hook
          port: 80
